* Fix tests under MSYS2 (Windows) <c72578>
* Fix BUILD_DATE in rrdtool help output <c72578>
* acinclude.m4: Include <stdlib.h> when using exit <ryandesign>
* rrdtool-release: Create NUMVERS from VERSION file <c72578>
* Avoids leaking of file descriptors in multi threaded programs by @ensc
* Avoids potential unterminated string because of fixed PATH_MAX buffer

Features
--------
* Remove autogenerated files from git repo (configure, Makefile.in, conftools, rrd_config.h.in) <c72578>

* Reads $RRD_LOCKING environment variable and adds --locking option to some tools. The updatex api has been also
  updated to support setting locking related bits in its extra_flags parameter. @ensc

  This allows now to choose between three kinds of locking:

    none: no locking is done at all; caller has to do it manually and can implement e.g. a timeout with alarm(2) or so
    try: fails when lock is hold by another process; users will see "ERROR: could not lock RRD". This is the default and the only possible mode with the old code
    block: waits until lock is available

  It can be used like

    env RRD_LOCKING=block rrdupdate ...

  or

    rrdupdate --locking none ...

  or

  rrd_updatex_r(filename, tmplt, RRD_FLAGS_LOCKING_MODE_BLOCK, ...);

* Add (remote) dump support to rrdcached <Tobias Hintze>

* Constify argv argument to library functions
  Without this users of library function that want to pass in const strings need to duplicate them to avoid compiler warnings

* Avoid multiple implementations of asprintf
  The locale-independent rrd_asprintf is equivalent to platform-provided snprintf when strings and integers are formatted.
  There is no user of vasprintf-msvc that is locale-dependent, therefore this implementation can be replaced with rrd_vasprintf.

RRDtool 1.8.0 - 2022-03-13
==========================

Bugfixes
--------
* python bindings: properly convert double values of rrd info <Stefan Gluszek>